Added third activity to open museum URLs, back button is functional and reverts to previous instance of the second activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android"
 package="museumGo">
-
+    <uses-permission android:name="android.permission.INTERNET" />
 <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
@@ -9,8 +8,7 @@ package="museumGo">
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.Project5">
-    <activity
-        android:name="museumGo.MainActivity">
+    <activity android:name="museumGo.MainActivity">
 
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -19,8 +17,12 @@ package="museumGo">
         </intent-filter>
 
     </activity>
-    <activity android:name=".secondScreen"
-                android:parentActivityName=".MainActivity"></activity>
+    <activity
+        android:name=".secondScreen"
+        android:parentActivityName=".MainActivity"></activity>
 
+    <activity android:name=".thirdScreen"
+        android:parentActivityName=".secondScreen">
+    </activity>
 </application>
 </manifest>
