--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@ package="museumGo">
     <uses-permission android:name="android.permission.INTERNET" />
 <application
     android:allowBackup="true"
-    android:icon="@drawable/museum"
+    android:icon="@mipmap/ic_launcher_round"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
